--- a/zts portfolio.xcodeproj/xcshareddata/xcschemes/zts portfolio.xcscheme
+++ b/zts portfolio.xcodeproj/xcshareddata/xcschemes/zts portfolio.xcscheme
@@ -26,8 +26,29 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "2C3470B4265AE9D6001B12BB"
+            BuildableName = "zts portfolio.app"
+            BlueprintName = "zts portfolio"
+            ReferencedContainer = "container:zts portfolio.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2CF205B826FA560F0079C72F"
+               BuildableName = "zts portfolioTests.xctest"
+               BlueprintName = "zts portfolioTests"
+               ReferencedContainer = "container:zts portfolio.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
