--- a/zts portfolio.xcodeproj/xcshareddata/xcschemes/zts portfolio.xcscheme
+++ b/zts portfolio.xcodeproj/xcshareddata/xcschemes/zts portfolio.xcscheme
@@ -49,13 +49,23 @@
                ReferencedContainer = "container:zts portfolio.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "2C443E6A270CDF2F0055DB2A"
+               BuildableName = "zts portfolioUITests.xctest"
+               BlueprintName = "zts portfolioUITests"
+               ReferencedContainer = "container:zts portfolio.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = "pl"
+      language = "en"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
