--- a/zts portfolio.xcodeproj/xcshareddata/xcschemes/zts portfolio.xcscheme
+++ b/zts portfolio.xcodeproj/xcshareddata/xcschemes/zts portfolio.xcscheme
@@ -83,6 +83,9 @@
             ReferencedContainer = "container:zts portfolio.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../zts portfolio/Configuration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
