--- a/zts portfolio/Configuration/Info.plist
+++ b/zts portfolio/Configuration/Info.plist
@@ -53,6 +53,10 @@
 	</dict>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>com.godaddysites.zerotwoswift.zts-portfolio.newProject</string>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
